[package]
name = "freebsd-nfs-exporter"
description = "Prometheus exporter for FreeBSD NFS stats"
version = "0.4.4"
authors = ["Alan Somers <Alan.Somers@ConnectWise.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://github.com/Axcient/freebsd-nfs-exporter.git"
rust-version = "1.81"
keywords = ["prometheus", "monitoring", "nfs", "freebsd"]
exclude = [
    "/.gitignore",
]

[[bin]]
name = "nfs-exporter"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
bincode = "1.3.0"
clap = { version = "4.1", default-features = true, features = ["cargo", "derive"] }
env_logger = "0.11"
capsicum = { version = "0.4.1", features = ["casper"] }
log = "0.4.27"
serde = "1.0.69"
serde_derive = "1.0.69"
prometheus = {version = "0.14.0", default-features = false, features = [] }
tokio = { version = "^1.25", features = ["macros", "net", "rt"] }

[build-dependencies]
bindgen = { version = "0.66.0", features=[] }
